cards section to json

--- a/Public/index.html
+++ b/Public/index.html
@@ -160,6 +160,7 @@
 
       </div>
 
+      <!-- HTML Section Cards -->
       <!-- section cards -->
       <div class="row">
         <!-- card 1 -->
@@ -167,7 +168,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Unresolved</h5>
-              <p class="card-text">60</p>
+              <p class="card-text" id="unresolved-count">0</p>
             </div>
           </div>
         </div>
@@ -177,7 +178,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Overdue</h5>
-              <p class="card-text">16</p>
+              <p class="card-text" id="overdue-count">0</p>
             </div>
           </div>
         </div>
@@ -187,7 +188,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Open</h5>
-              <p class="card-text">43</p>
+              <p class="card-text" id="open-count">0</p>
             </div>
           </div>
         </div>
@@ -197,13 +198,12 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">On hold</h5>
-              <p class="card-text">64</p>
+              <p class="card-text" id="onHold-count">0</p>
             </div>
           </div>
         </div>
-
-        <!-- end of cards section -->
       </div>
+      <!-- end of cards section -->
 
 
 
@@ -243,7 +243,8 @@
             </div>
 
             <!-- graphic image -->
-            <svg class="graphic-image" width="686" height="380" viewBox="0 0 686 380" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="graphic-image" width="686" height="380" viewBox="0 0 686 380" fill="none"
+              xmlns="http://www.w3.org/2000/svg">
               <g clip-path="url(#clip0_584_115)">
                 <path d="M0 355H686" stroke="#EBEDF0" />
                 <path d="M0 299H686" stroke="#EBEDF0" />
