--- a/Public/index.html
+++ b/Public/index.html
@@ -424,7 +424,7 @@
           </div>
 
 
-          
+
           <!-- Right Column: Stats -->
           <div class="col-md-4 graphic-data" style="padding: 0;">
             <div class="row border-bottom padding-zero-top">
@@ -468,6 +468,7 @@
           <!-- Section Tickets & Tasks -->
           <div class="tickets-tasks">
 
+            
             <!-- Section Unresolved Tickets -->
             <div class="card card-ticket" style="width: 50%;">
               <div class="card-body-title">
@@ -477,22 +478,22 @@
                 </div>
                 <h5>Group: <span>Support</span></h5>
               </div>
-              <ul class="list-group">
+              <ul class="list-group list-group-flush">
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                   Waiting on Feature Request
-                  <span class="badge bg-primary rounded-pill">4238</span>
+                  <span class="badge bg-primary rounded-pill" id="waiting-feature">0</span>
                 </li>
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                   Awaiting Customer Response
-                  <span class="badge bg-primary rounded-pill">1005</span>
+                  <span class="badge bg-primary rounded-pill" id="awaiting-response">0</span>
                 </li>
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                   Awaiting Developer Fix
-                  <span class="badge bg-primary rounded-pill">914</span>
+                  <span class="badge bg-primary rounded-pill" id="awaiting-fix">0</span>
                 </li>
-                <li class="list-group-item d-flex justify-content-between align-items-center" style="border: none;">
+                <li class="list-group-item d-flex justify-content-between align-items-center border-0">
                   Pending
-                  <span class="badge bg-primary rounded-pill">281</span>
+                  <span class="badge bg-primary rounded-pill" id="pending">0</span>
                 </li>
               </ul>
             </div>
