finished details json connection

--- a/Public/index.html
+++ b/Public/index.html
@@ -168,7 +168,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Unresolved</h5>
-              <p class="card-text" id="unresolved-count">0</p>
+              <p class="card-text" id="unresolved-data">0</p>
             </div>
           </div>
         </div>
@@ -178,7 +178,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Overdue</h5>
-              <p class="card-text" id="overdue-count">0</p>
+              <p class="card-text" id="overdue-data">0</p>
             </div>
           </div>
         </div>
@@ -188,7 +188,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Open</h5>
-              <p class="card-text" id="open-count">0</p>
+              <p class="card-text" id="open-data">0</p>
             </div>
           </div>
         </div>
@@ -198,7 +198,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">On hold</h5>
-              <p class="card-text" id="onHold-count">0</p>
+              <p class="card-text" id="onHold-data">0</p>
             </div>
           </div>
         </div>
@@ -448,17 +448,6 @@
               <div class="col-4 fw-bold text-end" id="sla-stat">--</div>
             </div>
           </div>
-
-
-
-
-
-
-
-
-
-
-
 
 
 
